[253180] Handle whitespace in enumeration values better.